# SocialMediaNetwork

./: CMakeLists.txt  README.md  main.cpp
DataStructures/: List.h  Multimap.cpp  Multimap.h  Node.h
Domain/: Friend.cpp  Friend.h  Messages.cpp  Messages.h  User.cpp  User.h
Exceptions/: MyExceptions.h
Repository/: Repository.cpp  Repository.h
Service/: Service.cpp  Service.h
Tests/: PRESAVES.cpp  PRESAVES.h  TESTS.cpp  TESTS.h
UserInterface/: UI.cpp  UI.h
